improve hover and add hint

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synthetic Data Enables Human-Grade Microtubule Analysis by Tuning Segmentation Foundation Models</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -90,6 +93,7 @@
                             </div>
                         </div>
                     </div>
+                    <div class="zoom-hint">💡 Hover over an image for 0.8s to enlarge</div>
                 </div>
 
                 <!-- Middle Column: Model Selector -->
@@ -119,6 +123,7 @@
                             <div class="placeholder-text">Select an image and models to view results</div>
                         </div>
                     </div>
+                    <div class="zoom-hint">💡 Hover over an image for 0.8s to enlarge</div>
                 </div>
             </div>
         </div>
