--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                     biological plausibility.</li>
                 <li>📊 <strong>Honest model comparison:</strong> We benchmark 9 classical and foundation models on
                     <code>SynthMT</code> — zero-shot and with HPO — so you know what actually works (spoiler: most
-                    don't).</li>
+                    don't).
+                </li>
                 <li>🚀 <strong>Finally, it works!</strong> <code>SAM3</code> + simple HPO on just 10 synthetic images
                     from our pipeline → near-perfect, sometimes <em>superhuman</em> segmentation on real data. Fully
                     automated MT analysis is here! ⭐</li>
@@ -261,7 +262,7 @@
         <div class="container">
             <h2>Synthetic Generation Pipeline</h2>
             <p class="pipeline-subtitle">From structural masks to photorealistic microscopy images in 5 steps</p>
-            
+
             <div class="pipeline-stages">
                 <div class="pipeline-stage">
                     <div class="stage-image">
@@ -584,7 +585,8 @@
     <section class="funding">
         <div class="container">
             <p style="font-size: 0.85em; color: #666; text-align: center;">
-                This work was funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) – FIP-12 – Project-ID 528483508
+                This work was funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) – FIP-12 –
+                Project-ID 528483508
             </p>
         </div>
     </section>
