--- a/index.html
+++ b/index.html
@@ -573,20 +573,31 @@
         </div>
     </section>
 
-    <section class="acknowledgement">
+    <section class="logos">
         <div class="container">
-            <p style="font-size: 0.9em; color: #666; text-align: right;">
-                We would like to thank the authors of the <a href="https://github.com/Bliss-e-V/SCAM-project-page">SCAM
-                    project page</a> for their template.
-            </p>
+            <div class="logo-row">
+                <a href="https://www.htw-berlin.de/" target="_blank" rel="noopener">
+                    <img src="media/logo_htw.svg" alt="HTW Berlin">
+                </a>
+                <a href="https://www.bht-berlin.de/" target="_blank" rel="noopener">
+                    <img src="media/logo_bht.svg" alt="Berliner Hochschule für Technik">
+                </a>
+                <a href="https://www.mpiib-berlin.mpg.de/en" target="_blank" rel="noopener">
+                    <img src="media/logo_mpi.svg" alt="Max Planck Institute">
+                </a>
+            </div>
         </div>
     </section>
 
-    <section class="funding">
+    <section class="acknowledgement">
         <div class="container">
-            <p style="font-size: 0.85em; color: #666; text-align: center;">
+            <p class="ack-funding">
                 This work was funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) – FIP-12 –
                 Project-ID 528483508
+            </p>
+            <p class="ack-template">
+                We would like to thank the authors of the <a href="https://github.com/Bliss-e-V/SCAM-project-page">SCAM
+                    project page</a> for their template.
             </p>
         </div>
     </section>
