--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header class="header">
         <div class="container">
-            <h1>Synthetic Data Enables Human-Grade Microtubule Analysis by Tuning Segmentation Foundation Models</h1>
+            <h1>Synthetic Data Enables Human-Grade Microtubule Analysis with Foundation Models for Segmentation</h1>
             <div class="authors">
                 <p class="header-label">Authors</p>
                 <p>
