update HPO description to specify TPE sampler

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="hpo-disclaimer">
-                        <strong>HPO</strong> = Hyperparameter Optimization via random search using 10 synthetic images
+                        <strong>HPO</strong> = Hyperparameter Optimization via TPE sampler using 10 synthetic images
                         from SynthMT. Each model's parameters were tuned to maximize <a
                             href="https://openaccess.thecvf.com/content_eccv_2018_workshops/w33/html/Liu_Densely_Connected_Stacked_U-network_for_Filament_Segmentation_in_Microscopy_Images_ECCVW_2018_paper.html"
                             target="_blank" title="Skeleton IoU metric for filament segmentation">SKIoU</a>.
